<resources>
    <string name="app_name">Signal mapper</string>

    <string name="action_settings">Settings</string>
    <string name="tab_map">Map</string>
    <string name="tab_summary">Summary</string>
    <string name="tab_settings">Settings</string>


    <string name="registration_consent_text">This application collects location and wireless environment (WiFi) information from the phone. The information is stored on the phone and on the Google Cloud, and the access is granted to the instructors of, and students registered for the Mobile and Ubiquitous Computing class at FRI, Ljubljana, Slovenia, and solely for educational and research purposes. In case the analysis of the data is published. the results will not refer to any single individual and will not reveal participants\' identities. You have the right to uninstall the application at any point, and, if you wish, all the collected data that relates to you will be destroyed. By clicking the \"Register\" button below, you confirm that you have read and understood the above information.</string>
    <string name="registration_demographics_text">Please fill out your demographics.</string>
    <string name="registration_personal_info_text">Please fill out your personal info.</string>
    <string name="registration_password_text">Password (you will need it if you will want to access connectivity info online).</string>
    <string name="registration_password_retype_text">Please retype your password.</string>
    <string name="registration_register_buttom">Register</string>

    <string name="registration_error_occupation">Enter your occupation!</string>
    <string name="registration_error_age">Age must be numeric</string>
    <string name="registration_error_first_name">Enter your first name!</string>
    <string name="registration_error_last_name">Enter your last name!</string>
    <string name="registration_error_blank_email">Enter your email!</string>
    <string name="registration_error_invalid_email">Email is in wrong format!</string>
    <string name="registration_error_password_length">Password should be between 8 and 16 characters!</string>
    <string name="registration_error_password_match">Passwords don\'t match!</string>
    <string name="registration_error_toast">Invalid input!</string>

    <string name="general_male">Male</string>
    <string name="general_female">Female</string>
    <string name="general_first_name">First name</string>
    <string name="general_last_name">Last name</string>
    <string name="general_email">E-mail</string>
    <string name="general_email_hint">somenone@example.com</string>
    <string name="general_password">Password</string>
    <string name="general_occupation">Occupation</string>
    <string name="general_age">Age</string>
    <string name="general_confirm">Confirm</string>
    <string name="general_registration">Registracija</string>

    <string name="settings_photo_click">Click on the photo to activate the camera</string>
    <string name="settings_personal_detail">Your personal details:</string>
    <string name="settings_change_sampling">You can change sampling settings here.</string>
    <string name="settings_sampling_interval_text">Sampling interval [minutes]</string>
    <string name="settings_error_sampling_interval">Sampling interval must be positive number!</string>
    <string name="settings_change_success">Settings changed!</string>
    <string name="settings_change_error">Invalid input!</string>

    <string name="main_title_text">Signal mapper</string>
    <string name="main_summary_rssi_home_text">Average RSSI at home:</string>
    <string name="main_summary_rssi_work_text">Average RSSI at home:</string>
    <string name="main_summary_strongest_ap_text">Strongest WiFi APs:</string>
    <string name="title_activity_maps">Map</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>
</resources>
