<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registration_consent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registration_consent_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <TextView
            android:id="@+id/registration_demographics_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_demographics_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/registration_occupation_editable"
            android:hint="@string/general_occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/registration_age_editable"
            android:hint="@string/general_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned" />

        <RadioGroup
            android:id="@+id/registration_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/registration_male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/general_male" />

            <RadioButton
                android:id="@+id/registration_female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_female" />

        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000" />

        <TextView
            android:id="@+id/registration_personal_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_personal_info_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/registration_first_name_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/general_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registration_last_name_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/general_last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registration_email_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/general_email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/registration_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_password_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/registration_password_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/general_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/registration_password_retype_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_password_retype_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/registration_password_editable2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/general_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registration_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registration_register_buttom" />


    </LinearLayout>

</ScrollView>